# python_microservices_demo

./: README.md
src/auth/: .dockerignore  Dockerfile  README.md  init.sql  pyproject.toml  server.py
src/auth/manifests/: auth-deploy.yaml  configmap.yaml  secret.yaml
src/gateway/: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
src/gateway/auth_svc/: access.py
src/gateway/manifests/: gateway-deploy.yaml  secret.yaml
src/gateway/storage/: util.py
