[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Phuc Huynh-Van <larryhuynh96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^3.2.6"
jedi = "^0.19.1"
flask = "^2.0.0"
jwt = "^1.3.1"
black = "^24.8.0"
pymysql = "^1.1.1"
flask-mysqldb = "^2.0.0"
lock = "^2018.3.25.2110"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
