[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Phuc Huynh-Van <phuc.huynh-van@knistr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask-pymongo = "^2.3.0"
pika = "^1.3.2"
flask = "^3.0.3"
pymongo = "3.5.1"
requests = "^2.32.3"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
